proyecto MIA 1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> l_comando
Rule 2     l_comando -> l_comando comando
Rule 3     l_comando -> comando
Rule 4     comando -> c_configure
Rule 5     comando -> c_create
Rule 6     comando -> c_delete
Rule 7     comando -> c_copy
Rule 8     comando -> c_transfer
Rule 9     comando -> c_rename
Rule 10    comando -> c_modify
Rule 11    comando -> c_add
Rule 12    comando -> backup
Rule 13    comando -> c_exec
Rule 14    c_exec -> EXEC SEPARADOR PATH FLECHA nt_directorio_con_archivo
Rule 15    c_add -> ADD SEPARADOR PATH FLECHA nt_directorio_con_archivo SEPARADOR BODY FLECHA CADENA
Rule 16    c_modify -> MODIFY SEPARADOR PATH FLECHA nt_directorio_con_archivo SEPARADOR BODY FLECHA CADENA
Rule 17    c_rename -> RENAME SEPARADOR PATH FLECHA nt_directorio_con_archivo SEPARADOR NAME FLECHA nt_nombre_archivo
Rule 18    c_transfer -> TRANSFER SEPARADOR FROM FLECHA nt_directorio_con_archivo SEPARADOR TO FLECHA nt_solo_directorio SEPARADOR MODE FLECHA tipo_modo
Rule 19    c_copy -> COPY SEPARADOR FROM FLECHA nt_directorio_con_archivo SEPARADOR TO FLECHA nt_solo_directorio
Rule 20    nt_directorio_con_archivo -> DIRECTORIO_CON_ARCHIVO
Rule 21    nt_directorio_con_archivo -> nt_solo_directorio
Rule 22    c_delete -> DELETE SEPARADOR PATH FLECHA nt_solo_directorio SEPARADOR NAME FLECHA nt_nombre_archivo
Rule 23    c_delete -> DELETE SEPARADOR PATH FLECHA nt_solo_directorio
Rule 24    c_create -> CREATE SEPARADOR NAME FLECHA nt_nombre_archivo SEPARADOR PATH FLECHA nt_solo_directorio SEPARADOR BODY FLECHA CADENA
Rule 25    nt_solo_directorio -> SOLO_DIRECTORIO
Rule 26    nt_nombre_archivo -> NOMBRE_ARCHIVO
Rule 27    nt_nombre_archivo -> NOMBRE_ARCHIVO_COMILLAS
Rule 28    c_configure -> CONFIGURE SEPARADOR TYPE FLECHA tipo_modo SEPARADOR ENCRYPT_LOG FLECHA booleanos SEPARADOR ENCRYPT_READ FLECHA booleanos SEPARADOR LLAVE FLECHA CADENA
Rule 29    c_configure -> CONFIGURE SEPARADOR TYPE FLECHA tipo_modo SEPARADOR ENCRYPT_LOG FLECHA booleanos SEPARADOR ENCRYPT_READ FLECHA booleanos
Rule 30    backup -> BACKUP
Rule 31    tipo_modo -> LOCAL
Rule 32    tipo_modo -> CLOUD
Rule 33    booleanos -> TRUE
Rule 34    booleanos -> FALSE

Terminals, with rules where they appear

ADD                  : 15
BACKUP               : 30
BODY                 : 15 16 24
CADENA               : 15 16 24 28
CLOUD                : 32
CONFIGURE            : 28 29
COPY                 : 19
CREATE               : 24
DELETE               : 22 23
DIRECTORIO_CON_ARCHIVO : 20
ENCRYPT_LOG          : 28 29
ENCRYPT_READ         : 28 29
EXEC                 : 14
FALSE                : 34
FLECHA               : 14 15 15 16 16 17 17 18 18 18 19 19 22 22 23 24 24 24 28 28 28 28 29 29 29
FROM                 : 18 19
LLAVE                : 28
LOCAL                : 31
MODE                 : 18
MODIFY               : 16
NAME                 : 17 22 24
NOMBRE_ARCHIVO       : 26
NOMBRE_ARCHIVO_COMILLAS : 27
PATH                 : 14 15 16 17 22 23 24
RENAME               : 17
SEPARADOR            : 14 15 15 16 16 17 17 18 18 18 19 19 22 22 23 24 24 24 28 28 28 28 29 29 29
SOLO_DIRECTORIO      : 25
TO                   : 18 19
TRANSFER             : 18
TRUE                 : 33
TYPE                 : 28 29
error                : 

Nonterminals, with rules where they appear

backup               : 12
booleanos            : 28 28 29 29
c_add                : 11
c_configure          : 4
c_copy               : 7
c_create             : 5
c_delete             : 6
c_exec               : 13
c_modify             : 10
c_rename             : 9
c_transfer           : 8
comando              : 2 3
inicio               : 0
l_comando            : 1 2
nt_directorio_con_archivo : 14 15 16 17 18 19
nt_nombre_archivo    : 17 22 24
nt_solo_directorio   : 18 19 21 22 23 24
tipo_modo            : 18 28 29

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . l_comando
    (2) l_comando -> . l_comando comando
    (3) l_comando -> . comando
    (4) comando -> . c_configure
    (5) comando -> . c_create
    (6) comando -> . c_delete
    (7) comando -> . c_copy
    (8) comando -> . c_transfer
    (9) comando -> . c_rename
    (10) comando -> . c_modify
    (11) comando -> . c_add
    (12) comando -> . backup
    (13) comando -> . c_exec
    (28) c_configure -> . CONFIGURE SEPARADOR TYPE FLECHA tipo_modo SEPARADOR ENCRYPT_LOG FLECHA booleanos SEPARADOR ENCRYPT_READ FLECHA booleanos SEPARADOR LLAVE FLECHA CADENA
    (29) c_configure -> . CONFIGURE SEPARADOR TYPE FLECHA tipo_modo SEPARADOR ENCRYPT_LOG FLECHA booleanos SEPARADOR ENCRYPT_READ FLECHA booleanos
    (24) c_create -> . CREATE SEPARADOR NAME FLECHA nt_nombre_archivo SEPARADOR PATH FLECHA nt_solo_directorio SEPARADOR BODY FLECHA CADENA
    (22) c_delete -> . DELETE SEPARADOR PATH FLECHA nt_solo_directorio SEPARADOR NAME FLECHA nt_nombre_archivo
    (23) c_delete -> . DELETE SEPARADOR PATH FLECHA nt_solo_directorio
    (19) c_copy -> . COPY SEPARADOR FROM FLECHA nt_directorio_con_archivo SEPARADOR TO FLECHA nt_solo_directorio
    (18) c_transfer -> . TRANSFER SEPARADOR FROM FLECHA nt_directorio_con_archivo SEPARADOR TO FLECHA nt_solo_directorio SEPARADOR MODE FLECHA tipo_modo
    (17) c_rename -> . RENAME SEPARADOR PATH FLECHA nt_directorio_con_archivo SEPARADOR NAME FLECHA nt_nombre_archivo
    (16) c_modify -> . MODIFY SEPARADOR PATH FLECHA nt_directorio_con_archivo SEPARADOR BODY FLECHA CADENA
    (15) c_add -> . ADD SEPARADOR PATH FLECHA nt_directorio_con_archivo SEPARADOR BODY FLECHA CADENA
    (30) backup -> . BACKUP
    (14) c_exec -> . EXEC SEPARADOR PATH FLECHA nt_directorio_con_archivo

    CONFIGURE       shift and go to state 14
    CREATE          shift and go to state 15
    DELETE          shift and go to state 16
    COPY            shift and go to state 17
    TRANSFER        shift and go to state 18
    RENAME          shift and go to state 19
    MODIFY          shift and go to state 20
    ADD             shift and go to state 21
    BACKUP          shift and go to state 22
    EXEC            shift and go to state 23

    inicio                         shift and go to state 1
    l_comando                      shift and go to state 2
    comando                        shift and go to state 3
    c_configure                    shift and go to state 4
    c_create                       shift and go to state 5
    c_delete                       shift and go to state 6
    c_copy                         shift and go to state 7
    c_transfer                     shift and go to state 8
    c_rename                       shift and go to state 9
    c_modify                       shift and go to state 10
    c_add                          shift and go to state 11
    backup                         shift and go to state 12
    c_exec                         shift and go to state 13

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> l_comando .
    (2) l_comando -> l_comando . comando
    (4) comando -> . c_configure
    (5) comando -> . c_create
    (6) comando -> . c_delete
    (7) comando -> . c_copy
    (8) comando -> . c_transfer
    (9) comando -> . c_rename
    (10) comando -> . c_modify
    (11) comando -> . c_add
    (12) comando -> . backup
    (13) comando -> . c_exec
    (28) c_configure -> . CONFIGURE SEPARADOR TYPE FLECHA tipo_modo SEPARADOR ENCRYPT_LOG FLECHA booleanos SEPARADOR ENCRYPT_READ FLECHA booleanos SEPARADOR LLAVE FLECHA CADENA
    (29) c_configure -> . CONFIGURE SEPARADOR TYPE FLECHA tipo_modo SEPARADOR ENCRYPT_LOG FLECHA booleanos SEPARADOR ENCRYPT_READ FLECHA booleanos
    (24) c_create -> . CREATE SEPARADOR NAME FLECHA nt_nombre_archivo SEPARADOR PATH FLECHA nt_solo_directorio SEPARADOR BODY FLECHA CADENA
    (22) c_delete -> . DELETE SEPARADOR PATH FLECHA nt_solo_directorio SEPARADOR NAME FLECHA nt_nombre_archivo
    (23) c_delete -> . DELETE SEPARADOR PATH FLECHA nt_solo_directorio
    (19) c_copy -> . COPY SEPARADOR FROM FLECHA nt_directorio_con_archivo SEPARADOR TO FLECHA nt_solo_directorio
    (18) c_transfer -> . TRANSFER SEPARADOR FROM FLECHA nt_directorio_con_archivo SEPARADOR TO FLECHA nt_solo_directorio SEPARADOR MODE FLECHA tipo_modo
    (17) c_rename -> . RENAME SEPARADOR PATH FLECHA nt_directorio_con_archivo SEPARADOR NAME FLECHA nt_nombre_archivo
    (16) c_modify -> . MODIFY SEPARADOR PATH FLECHA nt_directorio_con_archivo SEPARADOR BODY FLECHA CADENA
    (15) c_add -> . ADD SEPARADOR PATH FLECHA nt_directorio_con_archivo SEPARADOR BODY FLECHA CADENA
    (30) backup -> . BACKUP
    (14) c_exec -> . EXEC SEPARADOR PATH FLECHA nt_directorio_con_archivo

    $end            reduce using rule 1 (inicio -> l_comando .)
    CONFIGURE       shift and go to state 14
    CREATE          shift and go to state 15
    DELETE          shift and go to state 16
    COPY            shift and go to state 17
    TRANSFER        shift and go to state 18
    RENAME          shift and go to state 19
    MODIFY          shift and go to state 20
    ADD             shift and go to state 21
    BACKUP          shift and go to state 22
    EXEC            shift and go to state 23

    comando                        shift and go to state 24
    c_configure                    shift and go to state 4
    c_create                       shift and go to state 5
    c_delete                       shift and go to state 6
    c_copy                         shift and go to state 7
    c_transfer                     shift and go to state 8
    c_rename                       shift and go to state 9
    c_modify                       shift and go to state 10
    c_add                          shift and go to state 11
    backup                         shift and go to state 12
    c_exec                         shift and go to state 13

state 3

    (3) l_comando -> comando .

    CONFIGURE       reduce using rule 3 (l_comando -> comando .)
    CREATE          reduce using rule 3 (l_comando -> comando .)
    DELETE          reduce using rule 3 (l_comando -> comando .)
    COPY            reduce using rule 3 (l_comando -> comando .)
    TRANSFER        reduce using rule 3 (l_comando -> comando .)
    RENAME          reduce using rule 3 (l_comando -> comando .)
    MODIFY          reduce using rule 3 (l_comando -> comando .)
    ADD             reduce using rule 3 (l_comando -> comando .)
    BACKUP          reduce using rule 3 (l_comando -> comando .)
    EXEC            reduce using rule 3 (l_comando -> comando .)
    $end            reduce using rule 3 (l_comando -> comando .)


state 4

    (4) comando -> c_configure .

    CONFIGURE       reduce using rule 4 (comando -> c_configure .)
    CREATE          reduce using rule 4 (comando -> c_configure .)
    DELETE          reduce using rule 4 (comando -> c_configure .)
    COPY            reduce using rule 4 (comando -> c_configure .)
    TRANSFER        reduce using rule 4 (comando -> c_configure .)
    RENAME          reduce using rule 4 (comando -> c_configure .)
    MODIFY          reduce using rule 4 (comando -> c_configure .)
    ADD             reduce using rule 4 (comando -> c_configure .)
    BACKUP          reduce using rule 4 (comando -> c_configure .)
    EXEC            reduce using rule 4 (comando -> c_configure .)
    $end            reduce using rule 4 (comando -> c_configure .)


state 5

    (5) comando -> c_create .

    CONFIGURE       reduce using rule 5 (comando -> c_create .)
    CREATE          reduce using rule 5 (comando -> c_create .)
    DELETE          reduce using rule 5 (comando -> c_create .)
    COPY            reduce using rule 5 (comando -> c_create .)
    TRANSFER        reduce using rule 5 (comando -> c_create .)
    RENAME          reduce using rule 5 (comando -> c_create .)
    MODIFY          reduce using rule 5 (comando -> c_create .)
    ADD             reduce using rule 5 (comando -> c_create .)
    BACKUP          reduce using rule 5 (comando -> c_create .)
    EXEC            reduce using rule 5 (comando -> c_create .)
    $end            reduce using rule 5 (comando -> c_create .)


state 6

    (6) comando -> c_delete .

    CONFIGURE       reduce using rule 6 (comando -> c_delete .)
    CREATE          reduce using rule 6 (comando -> c_delete .)
    DELETE          reduce using rule 6 (comando -> c_delete .)
    COPY            reduce using rule 6 (comando -> c_delete .)
    TRANSFER        reduce using rule 6 (comando -> c_delete .)
    RENAME          reduce using rule 6 (comando -> c_delete .)
    MODIFY          reduce using rule 6 (comando -> c_delete .)
    ADD             reduce using rule 6 (comando -> c_delete .)
    BACKUP          reduce using rule 6 (comando -> c_delete .)
    EXEC            reduce using rule 6 (comando -> c_delete .)
    $end            reduce using rule 6 (comando -> c_delete .)


state 7

    (7) comando -> c_copy .

    CONFIGURE       reduce using rule 7 (comando -> c_copy .)
    CREATE          reduce using rule 7 (comando -> c_copy .)
    DELETE          reduce using rule 7 (comando -> c_copy .)
    COPY            reduce using rule 7 (comando -> c_copy .)
    TRANSFER        reduce using rule 7 (comando -> c_copy .)
    RENAME          reduce using rule 7 (comando -> c_copy .)
    MODIFY          reduce using rule 7 (comando -> c_copy .)
    ADD             reduce using rule 7 (comando -> c_copy .)
    BACKUP          reduce using rule 7 (comando -> c_copy .)
    EXEC            reduce using rule 7 (comando -> c_copy .)
    $end            reduce using rule 7 (comando -> c_copy .)


state 8

    (8) comando -> c_transfer .

    CONFIGURE       reduce using rule 8 (comando -> c_transfer .)
    CREATE          reduce using rule 8 (comando -> c_transfer .)
    DELETE          reduce using rule 8 (comando -> c_transfer .)
    COPY            reduce using rule 8 (comando -> c_transfer .)
    TRANSFER        reduce using rule 8 (comando -> c_transfer .)
    RENAME          reduce using rule 8 (comando -> c_transfer .)
    MODIFY          reduce using rule 8 (comando -> c_transfer .)
    ADD             reduce using rule 8 (comando -> c_transfer .)
    BACKUP          reduce using rule 8 (comando -> c_transfer .)
    EXEC            reduce using rule 8 (comando -> c_transfer .)
    $end            reduce using rule 8 (comando -> c_transfer .)


state 9

    (9) comando -> c_rename .

    CONFIGURE       reduce using rule 9 (comando -> c_rename .)
    CREATE          reduce using rule 9 (comando -> c_rename .)
    DELETE          reduce using rule 9 (comando -> c_rename .)
    COPY            reduce using rule 9 (comando -> c_rename .)
    TRANSFER        reduce using rule 9 (comando -> c_rename .)
    RENAME          reduce using rule 9 (comando -> c_rename .)
    MODIFY          reduce using rule 9 (comando -> c_rename .)
    ADD             reduce using rule 9 (comando -> c_rename .)
    BACKUP          reduce using rule 9 (comando -> c_rename .)
    EXEC            reduce using rule 9 (comando -> c_rename .)
    $end            reduce using rule 9 (comando -> c_rename .)


state 10

    (10) comando -> c_modify .

    CONFIGURE       reduce using rule 10 (comando -> c_modify .)
    CREATE          reduce using rule 10 (comando -> c_modify .)
    DELETE          reduce using rule 10 (comando -> c_modify .)
    COPY            reduce using rule 10 (comando -> c_modify .)
    TRANSFER        reduce using rule 10 (comando -> c_modify .)
    RENAME          reduce using rule 10 (comando -> c_modify .)
    MODIFY          reduce using rule 10 (comando -> c_modify .)
    ADD             reduce using rule 10 (comando -> c_modify .)
    BACKUP          reduce using rule 10 (comando -> c_modify .)
    EXEC            reduce using rule 10 (comando -> c_modify .)
    $end            reduce using rule 10 (comando -> c_modify .)


state 11

    (11) comando -> c_add .

    CONFIGURE       reduce using rule 11 (comando -> c_add .)
    CREATE          reduce using rule 11 (comando -> c_add .)
    DELETE          reduce using rule 11 (comando -> c_add .)
    COPY            reduce using rule 11 (comando -> c_add .)
    TRANSFER        reduce using rule 11 (comando -> c_add .)
    RENAME          reduce using rule 11 (comando -> c_add .)
    MODIFY          reduce using rule 11 (comando -> c_add .)
    ADD             reduce using rule 11 (comando -> c_add .)
    BACKUP          reduce using rule 11 (comando -> c_add .)
    EXEC            reduce using rule 11 (comando -> c_add .)
    $end            reduce using rule 11 (comando -> c_add .)


state 12

    (12) comando -> backup .

    CONFIGURE       reduce using rule 12 (comando -> backup .)
    CREATE          reduce using rule 12 (comando -> backup .)
    DELETE          reduce using rule 12 (comando -> backup .)
    COPY            reduce using rule 12 (comando -> backup .)
    TRANSFER        reduce using rule 12 (comando -> backup .)
    RENAME          reduce using rule 12 (comando -> backup .)
    MODIFY          reduce using rule 12 (comando -> backup .)
    ADD             reduce using rule 12 (comando -> backup .)
    BACKUP          reduce using rule 12 (comando -> backup .)
    EXEC            reduce using rule 12 (comando -> backup .)
    $end            reduce using rule 12 (comando -> backup .)


state 13

    (13) comando -> c_exec .

    CONFIGURE       reduce using rule 13 (comando -> c_exec .)
    CREATE          reduce using rule 13 (comando -> c_exec .)
    DELETE          reduce using rule 13 (comando -> c_exec .)
    COPY            reduce using rule 13 (comando -> c_exec .)
    TRANSFER        reduce using rule 13 (comando -> c_exec .)
    RENAME          reduce using rule 13 (comando -> c_exec .)
    MODIFY          reduce using rule 13 (comando -> c_exec .)
    ADD             reduce using rule 13 (comando -> c_exec .)
    BACKUP          reduce using rule 13 (comando -> c_exec .)
    EXEC            reduce using rule 13 (comando -> c_exec .)
    $end            reduce using rule 13 (comando -> c_exec .)


state 14

    (28) c_configure -> CONFIGURE . SEPARADOR TYPE FLECHA tipo_modo SEPARADOR ENCRYPT_LOG FLECHA booleanos SEPARADOR ENCRYPT_READ FLECHA booleanos SEPARADOR LLAVE FLECHA CADENA
    (29) c_configure -> CONFIGURE . SEPARADOR TYPE FLECHA tipo_modo SEPARADOR ENCRYPT_LOG FLECHA booleanos SEPARADOR ENCRYPT_READ FLECHA booleanos

    SEPARADOR       shift and go to state 25


state 15

    (24) c_create -> CREATE . SEPARADOR NAME FLECHA nt_nombre_archivo SEPARADOR PATH FLECHA nt_solo_directorio SEPARADOR BODY FLECHA CADENA

    SEPARADOR       shift and go to state 26


state 16

    (22) c_delete -> DELETE . SEPARADOR PATH FLECHA nt_solo_directorio SEPARADOR NAME FLECHA nt_nombre_archivo
    (23) c_delete -> DELETE . SEPARADOR PATH FLECHA nt_solo_directorio

    SEPARADOR       shift and go to state 27


state 17

    (19) c_copy -> COPY . SEPARADOR FROM FLECHA nt_directorio_con_archivo SEPARADOR TO FLECHA nt_solo_directorio

    SEPARADOR       shift and go to state 28


state 18

    (18) c_transfer -> TRANSFER . SEPARADOR FROM FLECHA nt_directorio_con_archivo SEPARADOR TO FLECHA nt_solo_directorio SEPARADOR MODE FLECHA tipo_modo

    SEPARADOR       shift and go to state 29


state 19

    (17) c_rename -> RENAME . SEPARADOR PATH FLECHA nt_directorio_con_archivo SEPARADOR NAME FLECHA nt_nombre_archivo

    SEPARADOR       shift and go to state 30


state 20

    (16) c_modify -> MODIFY . SEPARADOR PATH FLECHA nt_directorio_con_archivo SEPARADOR BODY FLECHA CADENA

    SEPARADOR       shift and go to state 31


state 21

    (15) c_add -> ADD . SEPARADOR PATH FLECHA nt_directorio_con_archivo SEPARADOR BODY FLECHA CADENA

    SEPARADOR       shift and go to state 32


state 22

    (30) backup -> BACKUP .

    CONFIGURE       reduce using rule 30 (backup -> BACKUP .)
    CREATE          reduce using rule 30 (backup -> BACKUP .)
    DELETE          reduce using rule 30 (backup -> BACKUP .)
    COPY            reduce using rule 30 (backup -> BACKUP .)
    TRANSFER        reduce using rule 30 (backup -> BACKUP .)
    RENAME          reduce using rule 30 (backup -> BACKUP .)
    MODIFY          reduce using rule 30 (backup -> BACKUP .)
    ADD             reduce using rule 30 (backup -> BACKUP .)
    BACKUP          reduce using rule 30 (backup -> BACKUP .)
    EXEC            reduce using rule 30 (backup -> BACKUP .)
    $end            reduce using rule 30 (backup -> BACKUP .)


state 23

    (14) c_exec -> EXEC . SEPARADOR PATH FLECHA nt_directorio_con_archivo

    SEPARADOR       shift and go to state 33


state 24

    (2) l_comando -> l_comando comando .

    CONFIGURE       reduce using rule 2 (l_comando -> l_comando comando .)
    CREATE          reduce using rule 2 (l_comando -> l_comando comando .)
    DELETE          reduce using rule 2 (l_comando -> l_comando comando .)
    COPY            reduce using rule 2 (l_comando -> l_comando comando .)
    TRANSFER        reduce using rule 2 (l_comando -> l_comando comando .)
    RENAME          reduce using rule 2 (l_comando -> l_comando comando .)
    MODIFY          reduce using rule 2 (l_comando -> l_comando comando .)
    ADD             reduce using rule 2 (l_comando -> l_comando comando .)
    BACKUP          reduce using rule 2 (l_comando -> l_comando comando .)
    EXEC            reduce using rule 2 (l_comando -> l_comando comando .)
    $end            reduce using rule 2 (l_comando -> l_comando comando .)


state 25

    (28) c_configure -> CONFIGURE SEPARADOR . TYPE FLECHA tipo_modo SEPARADOR ENCRYPT_LOG FLECHA booleanos SEPARADOR ENCRYPT_READ FLECHA booleanos SEPARADOR LLAVE FLECHA CADENA
    (29) c_configure -> CONFIGURE SEPARADOR . TYPE FLECHA tipo_modo SEPARADOR ENCRYPT_LOG FLECHA booleanos SEPARADOR ENCRYPT_READ FLECHA booleanos

    TYPE            shift and go to state 34


state 26

    (24) c_create -> CREATE SEPARADOR . NAME FLECHA nt_nombre_archivo SEPARADOR PATH FLECHA nt_solo_directorio SEPARADOR BODY FLECHA CADENA

    NAME            shift and go to state 35


state 27

    (22) c_delete -> DELETE SEPARADOR . PATH FLECHA nt_solo_directorio SEPARADOR NAME FLECHA nt_nombre_archivo
    (23) c_delete -> DELETE SEPARADOR . PATH FLECHA nt_solo_directorio

    PATH            shift and go to state 36


state 28

    (19) c_copy -> COPY SEPARADOR . FROM FLECHA nt_directorio_con_archivo SEPARADOR TO FLECHA nt_solo_directorio

    FROM            shift and go to state 37


state 29

    (18) c_transfer -> TRANSFER SEPARADOR . FROM FLECHA nt_directorio_con_archivo SEPARADOR TO FLECHA nt_solo_directorio SEPARADOR MODE FLECHA tipo_modo

    FROM            shift and go to state 38


state 30
